# Health_man

./: .gitignore  .test_cad_model.step.glb  README.md  pyproject.toml  requirements.txt  test_cad_model.py  test_cad_model.step  test_circular.py  test_dashboard_final.py  test_dashboard_full.py  test_pyqt6.py  test_simple.py
cad/: .electrode_plate.step.glb  .electrode_plate_optimized.step.glb  .electrode_plate_v2.step.glb  .health_scanner.step.glb  electrode_plate.py  electrode_plate.step  electrode_plate_optimized.py  electrode_plate_optimized.step  electrode_plate_v2.py  electrode_plate_v2.step  health_scanner.py  health_scanner.step  health_scanner.stl  snapshot_job.json
config/: scrape_sources.yaml
data/scraping/: quality_report.json
docs/governance/: data-governance-framework-design.md
docs/planning/: MVP1.0_技术方案_v1.1.md  Phase4_Layer_C_LLM_Distillation_Project_Plan.md
docs/功能需求/: 2026-07-11-HealthDataLab-implementation.md  2026-07-11-MVP1.0_data_and_medical_content_completion.md  2026-07-11-MVP1.0_data_and_medical_content_completion_v2.md  2026-07-11-MVP1.0_step5_plus_implementation.md  检测流程和报告的建议.doc
scripts/clinical/: rules_engine.py  scoring.py  standards.py
scripts/data/: download_scheduler.py  extraction_log.py  format_converter.py  literature_metadata_generator.py  literature_pipeline.py  metadata_generator.py  pdf_extractor.py  preprocessor.py  quality_checker.py  source_adapter.py  tcm_classifier.py  tcm_standard_loader.py
scripts/data_processing/: bia_processor.py  spo2_processor.py
scripts/governance/: __init__.py  compliance_manager.py  governance_framework.py  indicator_system.py  (+4 more)
(+422 files in other folders)
