# e:\Health_man\pyproject.toml
[project]
name = "health-man"
version = "0.1.0"
description = "大健康检测平台外部数据获取子系统"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyreadstat>=1.2",
    "PyMuPDF>=1.23",
    "requests>=2.31",
    "aiohttp>=3.9",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "keyring>=24.0",
    "APScheduler>=3.10",
    "scikit-learn>=1.4",
    "PyQt6>=6.5",
    "PyQt6-Charts>=6.5",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "heartpy>=1.2.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
